--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier -w 'src/**/*.{ts,tsx}'"
   },
   "dependencies": {
+    "aws-sdk": "^2.1655.0",
     "lucide-react": "^0.399.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
